[package]
name = "heritage-cli"
version = "0.3.0-beta"
description = "The Heritage wallet CLI, a Bitcoin Taproot wallet managing on-chain inheritance of bitcoins"
repository = "https://github.com/crypto7world/heritage-cli.git"
rust-version = "1.79"
edition = "2021"
authors = ["Crypto7 <john@crypto7.world>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btc-heritage-wallet = { git = "https://github.com/crypto7world/btc-heritage.git", tag = "v0.18.0"  }
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
rpassword = "7.3"
dirs-next = "2.0"
chrono = "0.4.38"
open = "5.2.0"

[dev-dependencies]
tempfile = "3"
