[package]
name = "heritage-cli"
version = "0.8.0-beta"
description = "The Heritage wallet CLI, a Bitcoin Taproot wallet managing on-chain inheritance of bitcoins"
repository = "https://github.com/crypto7world/heritage-cli.git"
rust-version = "1.81"
edition = "2021"
authors = ["Crypto7 <john@crypto7.world>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# btc-heritage-wallet = { path = "../btc-heritage/crates/btc-heritage-wallet" }
btc-heritage-wallet = { git = "https://github.com/crypto7world/btc-heritage.git", tag = "v0.29.0" }
clap = { version = "4.5", features = ["derive", "env"] }

tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4"
env_logger = "0.11"

rpassword = "7.3"
dirs-next = "2.0"
chrono = "0.4.38"
open = "5.2.0"
